# AutoTrade_V3

./: .gitignore  README.md  alembic.ini  pyproject.toml
docs/: PLAN.md
migrations/: README.md  env.py  script.py.mako
src/autotrade/app/: main.py
src/autotrade/app/routes/: __init__.py  chart.py
src/autotrade/core/: clock.py  compat.py  config.py  logging.py  schemas.py
src/autotrade/db/: __init__.py  _compat_sqlalchemy.py  base.py  session.py
src/autotrade/db/models/: __init__.py  ai.py  market.py  risk.py  strategy.py  trading.py
src/autotrade/messaging/: __init__.py  base.py  envelope.py  events.py  redis.py
tests/: test_chart_interface.py  test_clock.py  test_event_envelope.py  test_messaging_events.py  test_messaging_redis.py  test_models_metadata.py  test_settings_database.py
